[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bandl"
version = "0.2.0"
description = "Unified market data access (V2) with pluggable providers"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [{ name = "Bandl contributors" }]
keywords = ["finance", "markets", "binance", "zerodha", "coindcx", "ohlcv", "nse"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "httpx>=0.27,<1",
    "pydantic>=2.6,<3",
    "pandas>=2.0,<3",
    "requests>=2.28,<3",
    "beautifulsoup4>=4.11,<5",
    "lxml>=4.9,<6",
    "openpyxl>=3.1,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-cov>=4,<6",
    "build>=1.2,<2",
    "twine>=5,<7",
]

[project.urls]
Homepage = "https://github.com/stockalgo/bandl"
Repository = "https://github.com/stockalgo/bandl"
Issues = "https://github.com/stockalgo/bandl/issues"

[tool.setuptools.packages.find]
where = ["lib"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["lib"]
addopts = "-m 'not integration'"
markers = [
    "integration: network or credential-dependent tests",
]
