[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bandl"
version = "0.2.1"
description = "Unified market data access (V2) with pluggable providers"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [{ name = "Bandl contributors" }]
keywords = ["finance", "markets", "binance", "zerodha", "coindcx", "ohlcv", "nse"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "httpx>=0.28.1,<1",
    "pydantic>=2.13.4,<3",
    "pandas>=2.3.3,<3",
    "requests>=2.34.2,<3",
    "beautifulsoup4>=4.14.3,<5",
    "lxml>=6.1.0,<7",
    "openpyxl>=3.1.5,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3,<10",
    "pytest-cov>=7.1.0,<8",
    "build>=1.5.0,<2",
    "twine>=6.2.0,<7",
    "ruff>=0.15.13,<1",
]

[project.urls]
Homepage = "https://github.com/stockalgo/bandl"
Repository = "https://github.com/stockalgo/bandl"
Issues = "https://github.com/stockalgo/bandl/issues"

[tool.setuptools.packages.find]
where = ["lib"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["lib"]
addopts = "-m 'not integration'"
markers = [
    "integration: network or credential-dependent tests",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["SIM108"]

[tool.ruff.lint.isort]
known-first-party = ["bandl"]

[tool.ruff.format]
quote-style = "double"
